Sigil vNEXT DATE_TBA
    - Fix the entity display for shy, mdash and ndash.
    - Set modified state on book when page order is changed.
    - Fixed the cursor issues on moving from Book to Code View and vice-versa. The new view should
      now always gain keyboard focus and show the cursor properly.
    - Insert the xml tag explicitly so that Tidy doesn't insert one without encoding and standalone
      attributes.
    - Fix issue #877: Invalid xml error prevents Find/Replace window from opening.
    - Fix issue where switching between code and book view causes the code view to load old data
      from book view.
    - Fix issue 364: Go to line #.
    - Fix issue 742: Shortcut/menu action to close all tabs except the current one.
    - Fix issue 959: Original creator's name is mangled in About dialog.
    - Fix for chapter splitting issue involving filenames with spaces.
    - Makes sure the cursor is properly displayed on entering Code View.

Sigil v0.4.0 2011.08.15
    - Fix issue 650: Convert SVG prefixes into a form that Tidy will tolerate.
    - Fix issue 952: Allow compatible extension changes.
    - Fix issue 835: File, Close shortcut does not work on OS X due to shortcut conflict.
    - Fix issue 793: Don't delete com.apple.ibooks.display-options.xml.
    - Fix issue 319: Adding chapter break in code view at end of current chapter creates new
      chapter before the current one.
    - Fix issue 947: Normalise headings before automatically generating the TOC.
    - Build system changes to accomidate the Windows SDK.
    - Remove empty styles on body tags when cleaning webkit junk.
    - Fix  issue 549 : Split on SGF Chapter Markers puts new files (sections) at end of file list.
    - Fix issue 869: Right-click in Code View with error in code shows error dialog.
    - Fix issue 919 and issue 316: Replace potentially problematic characters with named or
      numerical entities.
    - Change About to include an authors section.