@@ -1,11 +1,14 @@
 <RCC>
-  <qresource prefix="javascript" >
-    <file>jquery-1.4.2.min.js</file>
-    <file>jquery.scrollTo-1.4.2-min.js</file>    
-    <file>book_view_current_location.js</file>
-    <file>new_selection.js</file>
-    <file>get_range.js</file>
-    <file>replace_text.js</file>
-    <file>get_segment_html.js</file>
+    <qresource prefix="/javascript">
+        <file>jquery-1.4.2.min.js</file>
+        <file>jquery.scrollTo-1.4.2-min.js</file>
+        <file>book_view_current_location.js</file>
+        <file>new_selection.js</file>
+        <file>get_range.js</file>
+        <file>replace_text.js</file>
+        <file>get_segment_html.js</file>
+        <file>format_block.js</file>
+        <file>get_block.js</file>
+        <file>set_cursor.js</file>
     </qresource>
 </RCC>
