@@ -546,6 +546,23 @@ private:
      * removed from the current chapter.
      */
     const QString c_GetSegmentHTML;
+
+    /**
+     * Javascript source that implements a function to find the
+     * first block-level parent of a node in the source.
+     */
+    const QString c_GetBlock;
+
+    /**
+     * Javascript source that implements a function to format the
+     * first block-level parent of a node in the source.
+     */
+    const QString c_FormatBlock;
+
+    /**
+     * Javascript source that sets the cursor position.
+     */
+    const QString c_SetCursor;
 };
 
 
