@@ -1,4 +1,7 @@
 Sigil vNEXT DATE_TBA
+    - Fix issues 657, 661, 694 and 867: The Heading Selector in Book View will now function as
+      expected and find the correct block-level tag to change rather than attempting to change
+      inline tags. It will also retain the attributes (including class) of the old tag.
     - Fix the entity display for shy, mdash and ndash.
     - Set modified state on book when page order is changed.
     - Fixed the cursor issues on moving from Book to Code View and vice-versa. The new view should
